@@ -1,8 +1,9 @@
 project.ext {
     springVersion = "4.0.5.RELEASE"
-    grailsVersion = "2.3.9"
+    grailsVersion = "2.3.11"
     slf4jVersion = "1.7.5"
     groovyVersion = System.getProperty('groovyVersion') ?: '2.1.9'
+    isTravisBuild = System.getenv().get("TRAVIS") == 'true'
 }
 
 def groovyMajorVersion = groovyVersion[0..2]
@@ -121,7 +122,8 @@ subprojects {
             documentation
         }
         dependencies {
-            documentation group: 'org.grails', name: 'grails-docs', version: '2.0.0'
+            documentation group: 'org.grails', name: 'grails-docs', version: grailsVersion
+            documentation group: 'org.codehaus.groovy', name: 'groovy-all', version: groovyVersion
             project(":grails-datastore-core")
             documentation "org.slf4j:jcl-over-slf4j:$slf4jVersion"
             documentation "org.slf4j:slf4j-api:$slf4jVersion"
@@ -171,7 +173,18 @@ subprojects {
         }
         
         test {
-            maxHeapSize = '2048m'
+            if (isTravisBuild) {
+                maxParallelForks = 2
+                jvmArgs = ['-server', '-Xmx768M', '-XX:MaxPermSize=256m']
+                forkEvery = 30
+                afterSuite {
+                    System.out.print('.')
+                    System.out.flush()
+                }
+            } else {
+                maxParallelForks = 4
+                jvmArgs = ['-server', '-Xmx2048M', '-XX:MaxPermSize=256m']
+            }
             if(System.getProperty("debug.tests")) {
                 jvmArgs '-Xmx2g', '-Xdebug', '-Xnoagent', '-Djava.compiler=NONE',
                         '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
