@@ -1,11 +1,11 @@
-version = "3.0.2.BUILD-SNAPSHOT"
+version = "3.0.2.RELEASE"
 configurations {
     optional
 }
 
 dependencies {
-    compile "org.mongodb:mongo-java-driver:2.12.0"
-    compile("org.springframework.data:spring-data-mongodb:1.4.1.RELEASE") {
+    compile "org.mongodb:mongo-java-driver:2.12.3"
+    compile("org.springframework.data:spring-data-mongodb:1.4.3.RELEASE") {
         exclude group:'org.mongodb',module:'mongo-java-driver'
     }
 
@@ -98,16 +98,4 @@ test {
         exceptionFormat ='full'
     }
     forkEvery = 30
-    maxParallelForks = 4
-    jvmArgs '-server','-Xmx1024M', '-Xms64M', '-XX:PermSize=32m','-XX:MaxPermSize=256m'
 }
-
-//test {
-//    if (System.getProperty('debug', 'false') == 'true') {
-//        jvmArgs '-server','-Xmx2048M', '-Xms64M', '-XX:PermSize=32m','-XX:MaxPermSize=256m', '-Xdebug',
-//                '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
-//    }
-//    else {
-//        jvmArgs '-server','-Xmx2048M', '-Xms64M', '-XX:PermSize=32m','-XX:MaxPermSize=256m'
-//    }
-//}
